--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "name": "app-receitas",
   "version": 2,
-  "builds": [{ "src": "src/api/server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "src/api/server.js" }]
+  "builds": [{ "src": "src/app.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "src/app.js" }]
 }
