--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "delivery-app-back-end",
   "version": "0.1.0",
   "description": "Back-end do projeto App de Delivery",
-  "main": "./src/app.js",
+  "main": "./api/app.js",
   "engines": {
     "node": ">=16.0.0"
   },
